# run-model-context-protocol-servers-with-aws-lambda

./: .gitignore  .mergify.yml  .versionrc  CHANGELOG.md  DEVELOP.md  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: cdk-checks.yml  check-uv-lock.yml  checks.yml  integ-tests.yml  lint-pr.yml  pull-request-checks.yml  pull-request-integ-tests.yml  python-checks.yml  release.yml  typescript-checks.yml  unit-tests.yml
demo/: DEVELOPMENT.md  architecture.md  env.example  package-lock.json  package.json  readme.md  tsconfig.json  turbo.json  vitest.config.ts
demo/.github/workflows/: deploy.yml
demo/applications/api/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
demo/docs/: architecture-diagrams.md  monitoring-guide.md  security-performance-guide.md  testing-guide.md
demo/scripts/: setup-enhanced.sh
demo/test/: setup.ts
e2e_tests/: clean_up_integ_test.sh  run_integ_test.sh  servers_config.integ.json
e2e_tests/python/: chat_session.py  main.py  requirements.txt
e2e_tests/setup/: integ-test-authentication.yaml  setup.md
e2e_tests/typescript/: package-lock.json  package.json  tsconfig.json
examples/chatbot/: README.md  requirements.txt
examples/chatbot-typescript/: README.md  package-lock.json  package.json
src/python/: README.md  pyproject.toml
src/python/src/mcp_lambda/client/: lambda_client.py
src/python/tests/client/: test_lambda_client.py
src/typescript/: jest.config.js  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json  tsconfig.prod.json
(+137 files in other folders)
